[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'node/rpc',
    'pallets/rewards',
    'pallets/difficulty',
    'pallets/creditcoin',
    'pallets/offchain-task-scheduler/runtime-api',
    'pallets/offchain-task-scheduler',
    'pallets/staking',
    'runtime',
    "sha3pow",
    "primitives",
    "test/client",
    "test/runtime-utils",
    "test/traced-test",
]

[workspace.package]
version = '2.211.2'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate/'

[workspace.dependencies]

# Crates.io Dependencies
assert_matches = { version = "1.5.0" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.3.4" }
jsonrpc-core = { version = "18.0.0" }
jsonrpsee = { version = "0.16.2" }
log = { version = "0.4.17" }
parity-scale-codec = { version = "3.2.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"] }


# Project Local Dependencies
creditcoin-node-runtime = { path = "runtime" }
pallet-creditcoin = { path = "pallets/creditcoin", default-features = false }
pallet-difficulty = { path = "pallets/difficulty", default-features = false }
pallet-offchain-task-scheduler = { path = "pallets/offchain-task-scheduler", default-features = false }
pallet-rewards = { path = "pallets/rewards", default-features = false }
pallet-staking = { path = "pallets/staking", default-features = false }
primitives = { path = "primitives", default-features = false }
runtime-utils = { package = "test-runtime-utils", path = "test/runtime-utils", default-features = false }
task-scheduler-runtime-api = { path = "pallets/offchain-task-scheduler/runtime-api", default-features = false }
traced-test = { path = "test/traced-test" }

# Substrate Dependencies
frame-benchmarking-cli = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git"}
frame-benchmarking = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-executive = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-election-provider-support = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-support = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-system = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-system-benchmarking = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-system-rpc-runtime-api = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-balances = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-randomness-collective-flip = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-session = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-staking-substrate = { package = "pallet-staking", branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-scheduler = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-sudo = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-timestamp = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-transaction-payment = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-transaction-payment-rpc = {  branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sc-basic-authorship = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-cli = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git"}
sc-client-api = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-client-db = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", features = ["test-helpers"] }
sc-consensus = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-pow = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-executor = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git"}
sc-keystore = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-offchain = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-rpc = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-telemetry = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool-api = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sc-service = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", features = [
    "test-helpers",
] }
sp-api = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-application-crypto = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sp-arithmetic = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-block-builder = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-blockchain = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-consensus-pow = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-core = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-inherents = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-io = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-keystore = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-offchain = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-runtime = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-runtime-interface = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-session = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-state-machine = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-staking = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-std = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-timestamp = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-version = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
substrate-build-script-utils = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
substrate-frame-rpc-system = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
substrate-prometheus-endpoint = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
substrate-test-client = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
tracing = { package = "sp-tracing", branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git",  default-features = false }
frame-try-runtime = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-externalities = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git", default-features = false }
substrate-wasm-builder = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
try-runtime-cli = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
sp-keyring = { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate.git" }
