[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'node/rpc',
    'pallets/rewards',
    'pallets/difficulty',
    'pallets/creditcoin',
    'pallets/offchain-task-scheduler/runtime-api',
    'pallets/offchain-task-scheduler',
    'pallets/staking',
    'pallets/pos-switch',
    'runtime',
    "sha3pow",
    "primitives",
    "test/client",
    "test/runtime-utils",
    "test/traced-test",
]

resolver = "2"

[workspace.package]
version = '2.222.2'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate/'

[workspace.dependencies]

# Crates.io Dependencies
assert_matches = { version = "1.5.0" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.3.4" }
jsonrpc-core = { version = "18.0.0" }
jsonrpsee = { version = "0.16.2" }
log = { version = "0.4.18" }
parity-scale-codec = { version = "3.2.1", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
scale-info = { version = "2.7", default-features = false, features = [
    "derive",
] }


# Project Local Dependencies
creditcoin-node-runtime = { path = "runtime" }
pallet-creditcoin = { path = "pallets/creditcoin", default-features = false }
pallet-difficulty = { path = "pallets/difficulty", default-features = false }
pallet-offchain-task-scheduler = { path = "pallets/offchain-task-scheduler", default-features = false }
pallet-rewards = { path = "pallets/rewards", default-features = false }
pallet-staking = { path = "pallets/staking", default-features = false }
primitives = { path = "primitives", default-features = false }
runtime-utils = { package = "test-runtime-utils", path = "test/runtime-utils", default-features = false }
task-scheduler-runtime-api = { path = "pallets/offchain-task-scheduler/runtime-api", default-features = false }
traced-test = { path = "test/traced-test" }
pallet-pos-switch = { path = "pallets/pos-switch", default-features = false }

# Substrate Dependencies
frame-benchmarking-cli = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
frame-benchmarking = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
frame-executive = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
frame-election-provider-support = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
frame-support = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
frame-system = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
frame-system-benchmarking = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
frame-system-rpc-runtime-api = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-balances = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-session = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-staking-substrate = { package = "pallet-staking", branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-scheduler = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-sudo = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-timestamp = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-transaction-payment = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-transaction-payment-rpc = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
pallet-transaction-payment-rpc-runtime-api = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sc-basic-authorship = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-chain-spec = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-cli = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-client-api = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-client-db = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", features = [
    "test-helpers",
] }
sc-consensus = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-consensus-pow = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-consensus-slots = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-network = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-executor = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-keystore = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-offchain = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-rpc = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-rpc-api = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-telemetry = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-transaction-pool = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-transaction-pool-api = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-service = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", features = [
    "test-helpers",
] }
sp-api = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-application-crypto = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sp-arithmetic = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-block-builder = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-blockchain = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sp-consensus = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-consensus-pow = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-core = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-inherents = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-io = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-keystore = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-offchain = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-runtime = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-runtime-interface = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-session = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-state-machine = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-staking = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-std = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-timestamp = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sp-transaction-pool = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-version = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
substrate-build-script-utils = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
substrate-frame-rpc-system = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
substrate-prometheus-endpoint = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
substrate-test-client = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
tracing = { package = "sp-tracing", branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
frame-try-runtime = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sp-externalities = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
substrate-wasm-builder = "10.0.0"
try-runtime-cli = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sp-keyring = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sc-consensus-babe = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sp-consensus-babe = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sc-consensus-grandpa = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }
sp-consensus-grandpa = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-babe = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-grandpa = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-election-provider-multi-phase = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-im-online = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-bags-list = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-authorship = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-staking-reward-fn = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-offences = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
sc-network-sync = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git" }

# Pallets necessary for use with the Staking Dashboard
# CSUB-503 https://gluwa.atlassian.net/browse/CSUB-503?atlOrigin=eyJpIjoiODY0NGFjOTkzZjE1NGFkYTg1OTNkZmYxZGU1NjlmYjIiLCJwIjoiaiJ9
pallet-utility = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-proxy = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-fast-unstake = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-nomination-pools = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
pallet-identity = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
substrate-test-utils = { branch = "testing/CSUB-526-staking-rewards", git = "https://github.com/gluwa/substrate.git", default-features = false }
